Pequena atualização ao Index

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <br><br>
                     No momento, estou cursando ADS (Análise e Desenvolvimento de Sistemas) pela Uninter e pretendo seguir carreira como desenvolvedor. 
                 </p>
-                    <p>Nas horas vagas, gosto de me divertir com alguns jogos e passar um tempo junto com minha querida namorada. Está é minha conta da <a href="https://steamcommunity.com/id/Sauraxxus/">steam</a> para maior análise! </p>
+                    <p>Nas horas vagas, gosto de me divertir com alguns jogos e estudar mais a frente sobre novas tecnologias. </p>
     </section>
 </div>
 </div>
